--- a/blog-details.html
+++ b/blog-details.html
@@ -425,7 +425,7 @@
     <p class="text">
         <strong style="color:#7ec8e3;">Oljemassage</strong><br>
         <strong style="color:#7ec8e3;">30 min:</strong> 400 kr &nbsp; | &nbsp;
-        <strong style="color:#7ec8e3;">45 min:</strong> 500 kr &nbsp; | &nbsp;
+        <!-- <strong style="color:#7ec8e3;">45 min:</strong> 500 kr &nbsp; | &nbsp; -->
         <strong style="color:#7ec8e3;">60 min:</strong> 600 kr &nbsp; | &nbsp;
         <strong style="color:#7ec8e3;">90 min:</strong> 900 kr
     </p>
@@ -446,7 +446,7 @@
                     <h4><i class="flaticon-call"></i> Contact Number</h4>
                     <p class="text"><a href="tel:+46736955488">+46 736 955 488</a></p>
 
-                    <h4><i class="flaticon-clock"></i> Opening Hours</h4>
+                    <h4><i class="flaticon-clock"></i> Öppettider</h4>
                     <p class="text">
                         MÅN – FRE: 10:00 – 19:00<br>
                         LÖR: 11:00 – 19:00<br>
@@ -493,15 +493,13 @@
                         <div class="footer-widget ptb-100 border-right">
                             <div class="navbar-brand">
                                 <a href="index.html">
-                                    <img src="assets/images/logo.png" alt="Logo" />
+                                    <img src="assets/images/logo.png" alt="Logo" style="height: 50px; width: auto;" />
+
                                 </a>
                             </div>
                             <p>
-                                Welcome to FahSai Thai — where expert hands and warm hearts deliver the finest massage
-                                experience in Sweden. Whether you're seeking deep relaxation, stress relief, or muscle
-                                recovery, our personalized treatments are designed to leave you feeling refreshed and
-                                renewed. Loved by locals and trusted by regulars, we take pride in creating a peaceful
-                                space for your body and mind.
+                              Välkommen till FahSai Thai – där erfarna händer och varma hjärtan levererar Sveriges bästa massageupplevelse. Oavsett om du söker djup avslappning, stresslindring eller muskelåterhämtning, är våra personligt anpassade behandlingar utformade för att få dig att känna dig fräsch och förnyad. Älskad av lokalbor och betrodd av stamkunder – vi är stolta över att skapa en fridfull plats för både kropp och sinne.
+
                             </p>
                             <div class="social-link">
                                 <h3>Follow Us On</h3>
@@ -578,7 +576,7 @@
                                     416 73 Göteborg, Sweden
                                 </li>
                                 <li>
-                                    <strong>🕒 Opening Hours:</strong><br>
+                                    <strong>🕒 Öppettider:</strong><br>
                                     MÅN – FRE: 10:00 – 19:00<br>
                                     LÖR: 11:00 – 19:00<br>
                                     SÖN: STÄNGT
