--- a/services.html
+++ b/services.html
@@ -313,19 +313,22 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <a href="https://wa.me/46736955488?text=Hi%2C%20I%27m%20interested%20in%20booking%20an%20Oil%20Massage.%20Is%20it%20available%3F"
+                                   
+
+
+
+                                       <a href="https://wa.me/46736955488?text=Hi%2C%20I'm%20interested%20in%20booking%20a%20Thai%20Mixed%20Massage.%20Is%20it%20available%3F"
                                         target="_blank">
 
-                                        <h3 class="title">Oljemassage</h3>
-                                        <p class="text">En avslappnande massage med varm olja som mjukar upp musklerna,
-                                            minskar stress och skapar lugn.</p>
+                                        <h3 class="title">Thai Mixed Massage </h3>
+                                        <p class="text">En unik kombination av traditionell thailändsk och modern
+                                            massage –
+                                            för både energi och avslappning.</p>
                                         <span class="price" style="font-size: 18px;">
-                                            <strong style="color: #7ec8e3;">30 min</strong>: 400 kr<br>
-                                            <strong style="color: #7ec8e3;">45 min</strong>: 500 kr<br>
-                                            <strong style="color: #7ec8e3;">60 min</strong>: 600 kr<br>
-                                            <strong style="color: #7ec8e3;">90 min</strong>: 900 kr
+                                            <strong style="color: #7ec8e3;">30 min</strong>: 450 kr<br>
+                                            <strong style="color: #7ec8e3;">60 min</strong>: 650 kr<br>
+                                            <strong style="color: #7ec8e3;">90 min</strong>: 950 kr
                                         </span>
-
                                     </a>
                                 </div>
                             </div>
@@ -341,18 +344,19 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <a href="https://wa.me/46736955488?text=Hi%2C%20I'm%20interested%20in%20booking%20a%20Thai%20Mixed%20Massage.%20Is%20it%20available%3F"
+                                  <a href="https://wa.me/46736955488?text=Hi%2C%20I%27m%20interested%20in%20booking%20an%20Oil%20Massage.%20Is%20it%20available%3F"
                                         target="_blank">
 
-                                        <h3 class="title">Thai Mixed Massage </h3>
-                                        <p class="text">En unik kombination av traditionell thailändsk och modern
-                                            massage –
-                                            för både energi och avslappning.</p>
+                                        <h3 class="title">Oljemassage</h3>
+                                        <p class="text">En avslappnande massage med varm olja som mjukar upp musklerna,
+                                            minskar stress och skapar lugn.</p>
                                         <span class="price" style="font-size: 18px;">
-                                            <strong style="color: #7ec8e3;">30 min</strong>: 450 kr<br>
-                                            <strong style="color: #7ec8e3;">60 min</strong>: 650 kr<br>
-                                            <strong style="color: #7ec8e3;">90 min</strong>: 950 kr
+                                            <strong style="color: #7ec8e3;">30 min</strong>: 400 kr<br>
+                                            <!-- <strong style="color: #7ec8e3;">45 min</strong>: 500 kr<br> -->
+                                            <strong style="color: #7ec8e3;">60 min</strong>: 600 kr<br>
+                                            <strong style="color: #7ec8e3;">90 min</strong>: 900 kr
                                         </span>
+
                                     </a>
 
                                 </div>
@@ -673,7 +677,7 @@
                             <img src="assets/images/clock.png" alt="Location Icon" style="width: 30px; height: 30px;">
                         </div>
                         <div class="content">
-                            <h3 class="title">Satu's Öppettider</h3>
+                            <h3 class="title">  Öppettider</h3>
                             <span class="text">MÅN – FRE: 10:00 – 19:00
 
                                 LÖR: 11:00 – 19:00
@@ -714,26 +718,28 @@
                 <div class="col p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/service/service1.jpg" alt="Demo Image">
+                            <img src="assets/images/service/thai.jpeg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title">Sportmassage</h3>
-                            <p class="text">Sportmassage hjälper kroppen att återhämta sig från spänningar,
-                                stress och fysisk belastning. Den lindrar djupa muskelspänningar, förbättrar
-                                flexibiliteten, minskar ömhet och ökar rörligheten –
-                                så att du känner dig lättare, mer avslappnad och i balans i vardagen.
+                            <h3 class="title">Thai Mixed Massage</h3>
+                            <p class="text">Thai Mixed Massage kombinerar det bästa från traditionell thailändsk massage
+                                med
+                                modern behandling. Den löser upp spänningar, förbättrar cirkulationen och återställer
+                                kroppens naturliga balans –
+                                så att du känner dig avslappnad, påfylld med energi och mer i harmoni med din kropp.
                             </p>
                             <div class="hover-content">
-                                <a href="https://wa.me/46736955488?text=Hi%2C%20I%27m%20interested%20in%20your%20massage%20services.%20Is%20Sportmassage%20available%3F"
-                                    class="primary-btn">Appointment</a>
+                                <a href="https://wa.me/46736955488?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services."
+                                    target="_blank" class="primary-btn">Appointment</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                
                 <div class="col p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/service/service2.jpg" alt="Demo Image">
+                            <img src="assets/images/service/oil.jpeg" alt="Demo Image">
                         </div>
                         <div class="content">
                             <h3 class="title">Oljemassage</h3>
@@ -752,19 +758,18 @@
                 <div class="col p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/service/service3.jpg" alt="Demo Image">
+                            <img src="assets/images/service/service4.jpg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title">Thai Mixed Massage</h3>
-                            <p class="text">Thai Mixed Massage kombinerar det bästa från traditionell thailändsk massage
-                                med
-                                modern behandling. Den löser upp spänningar, förbättrar cirkulationen och återställer
-                                kroppens naturliga balans –
-                                så att du känner dig avslappnad, påfylld med energi och mer i harmoni med din kropp.
+                            <h3 class="title">Sportmassage</h3>
+                            <p class="text">Sportmassage hjälper kroppen att återhämta sig från spänningar,
+                                stress och fysisk belastning. Den lindrar djupa muskelspänningar, förbättrar
+                                flexibiliteten, minskar ömhet och ökar rörligheten –
+                                så att du känner dig lättare, mer avslappnad och i balans i vardagen.
                             </p>
                             <div class="hover-content">
-                                <a href="https://wa.me/46736955488?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services."
-                                    target="_blank" class="primary-btn">Appointment</a>
+                                <a href="https://wa.me/46736955488?text=Hi%2C%20I%27m%20interested%20in%20your%20massage%20services.%20Is%20Sportmassage%20available%3F"
+                                    class="primary-btn">Appointment</a>
                             </div>
                         </div>
                     </div>
@@ -865,15 +870,13 @@
                         <div class="footer-widget ptb-100 border-right">
                             <div class="navbar-brand">
                                 <a href="index.html">
-                                    <img src="assets/images/logo.png" alt="Logo" />
+                                    <img src="assets/images/logo.png" alt="Logo" style="height: 50px; width: auto;" />
+
                                 </a>
                             </div>
                             <p>
-                                Welcome to FahSai Thai — where expert hands and warm hearts deliver the finest massage
-                                experience in Sweden. Whether you're seeking deep relaxation, stress relief, or muscle
-                                recovery, our personalized treatments are designed to leave you feeling refreshed and
-                                renewed. Loved by locals and trusted by regulars, we take pride in creating a peaceful
-                                space for your body and mind.
+                              Välkommen till FahSai Thai – där erfarna händer och varma hjärtan levererar Sveriges bästa massageupplevelse. Oavsett om du söker djup avslappning, stresslindring eller muskelåterhämtning, är våra personligt anpassade behandlingar utformade för att få dig att känna dig fräsch och förnyad. Älskad av lokalbor och betrodd av stamkunder – vi är stolta över att skapa en fridfull plats för både kropp och sinne.
+
                             </p>
                             <div class="social-link">
                                 <h3>Follow Us On</h3>
@@ -950,7 +953,7 @@
                                     416 73 Göteborg, Sweden
                                 </li>
                                 <li>
-                                    <strong>🕒 Opening Hours:</strong><br>
+                                    <strong>🕒 Öppettider:</strong><br>
                                     MÅN – FRE: 10:00 – 19:00<br>
                                     LÖR: 11:00 – 19:00<br>
                                     SÖN: STÄNGT
