--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="content mb-30">
-                        <h2 class="title">
+                        <h2 class="title" style="color: white">
                             Vår Berättelse om Välbefinnande
                             <span></span>
                         </h2>
@@ -383,7 +383,7 @@
                             <img src="assets/images/service/thai.jpeg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title">Thai Mixed Massage</h3>
+                            <h3 class="title" style="color: white;">Thai Mixed Massage</h3>
                             <p class="text">Thai Mixed Massage kombinerar det bästa från traditionell thailändsk massage
                                 med
                                 modern behandling. Den löser upp spänningar, förbättrar cirkulationen och återställer
@@ -403,7 +403,8 @@
                             <img src="assets/images/service/oil.jpeg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title">Oljemassage</h3>
+                            <h3 class="title" style="color: white;">Oljemassage</h3>
+
                             <p class="text">Oljemassage är en djupt avslappnande upplevelse som lugnar
                                 både kropp och sinne. Varm olja masseras varsamt in i huden för att mjuka upp musklerna,
                                 lugna nervsystemet och minska vardagsstress –
@@ -568,7 +569,7 @@
                                             minskar stress och skapar lugn.</p>
                                         <span class="price" style="font-size: 18px;">
                                             <strong style="color: #7ec8e3;">30 min</strong>: 400 kr<br>
-                                            <strong style="color: #7ec8e3;">45 min</strong>: 500 kr<br>
+                                            <!-- <strong style="color: #7ec8e3;">45 min</strong>: 500 kr<br> -->
                                             <strong style="color: #7ec8e3;">60 min</strong>: 600 kr<br>
                                             <strong style="color: #7ec8e3;">90 min</strong>: 900 kr
                                         </span>
@@ -580,7 +581,7 @@
                         <div class="col-md-6">
                             <div class="card mb-30">
                                 <div class="image">
-                                    <img src="assets/images/gallery/gallery3.jpg" alt="Demo Image">
+                                    <img src="assets/images/gallery/woman-working-spa.jpeg" alt="Demo Image">
                                     <div class="hover-content">
                                         <a href="https://wa.me/46736955488?text=Hi%2C%20I'm%20interested%20in%20booking%20a%20Thai%20Mixed%20Massage.%20Is%20it%20available%3F"
                                             target="_blank">Book Now</a>
@@ -881,7 +882,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-6">
-                    <div class="card mb-30">
+                    <div class="card mb-30 " style="height: 120px !important;">
                         <div class="icon">
                             <img src="assets/images/location.png" alt="Location Icon"
                                 style="width: 24px; height: 24px;">
@@ -897,7 +898,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="card mb-30">
+                    <div class="card mb-30" style="height: 120px !important;">
                         <div class="icon">
                             <img src="assets/images/phone-call (1).png" alt="Location Icon"
                                 style="width: 24px; height: 24px;">
@@ -916,15 +917,15 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="card mb-30">
+                    <div class="card mb-30" style="height: 120px !important;">
                         <div class="icon">
                             <img src="assets/images/clock.png" alt="Location Icon" style="width: 30px; height: 30px;">
                         </div>
                         <div class="content">
                             <h3 class="title"> Öppettider</h3>
-                            <span class="text">MÅN – FRE: 10:00 – 19:00
+                            <span class="text">MÅN – FRE: 10:00 – 19:00 <br>
 
-                                LÖR: 11:00 – 19:00
+                                LÖR: 11:00 – 19:00 <br>
 
                                 SÖN: STÄNGT (Closed)</span>
                         </div>
@@ -974,7 +975,7 @@
                 </div>
                 <div class="col-lg-6 col-md-10 mb-30">
                     <div class="image">
-                        <img src="assets/images/woman-working-spa.jpeg" alt="Demo Image">
+                        <img src="assets/images/new.jpeg" alt="Demo Image">
                     </div>
                 </div>
             </div>
