--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="image mb-30">
-                            <img src="assets/images/about/about.jpegy" alt="Demo Image" />
+                            <img src="assets/images/about/about1.png" alt="Demo Image" />
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -289,7 +289,7 @@
         <!-- end about section -->
 
         <!-- start promo service section -->
-        <section class="promo-service-section pb-70">
+        <section class="promo-service-section pb-70 pt-70">
             <div class="container">
                 <div class="row justify-content-center">
 
@@ -522,15 +522,11 @@
                                     </a>
                                 </div>
                                 <p>
-                                    Welcome to FahSai Thai — where expert hands and warm hearts deliver the finest
-                                    massage
-                                    experience in Sweden. Whether you're seeking deep relaxation, stress relief, or
-                                    muscle
-                                    recovery, our personalized treatments are designed to leave you feeling refreshed
-                                    and
-                                    renewed. Loved by locals and trusted by regulars, we take pride in creating a
-                                    peaceful
-                                    space for your body and mind.
+                                     Välkommen till FahSai Thai – där erfarna händer och varma hjärtan levererar Sveriges
+                                bästa massageupplevelse. Oavsett om du söker djup avslappning, stresslindring eller
+                                muskelåterhämtning, är våra personligt anpassade behandlingar utformade för att få dig
+                                att känna dig fräsch och förnyad. Älskad av lokalbor och betrodd av stamkunder – vi är
+                                stolta över att skapa en fridfull plats för både kropp och sinne.
                                 </p>
                                 <div class="social-link">
                                     <h3>Follow Us On</h3>
